set content-type for IOS attachment

--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.12.0.4l)
+  name: Frigate Notifications (0.12.0.4m)
   author: SgtBatten
   homeassistant:
     min_version: 2024.6.0
@@ -1098,6 +1098,7 @@ action:
                               url: "{{tap_action}}"
                               attachment:
                                 url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
+                                content-type: jpeg
                               push:
                                 sound:
                                   name: "{{sound}}"
@@ -1152,6 +1153,7 @@ action:
                                 url: "{{tap_action}}"
                                 attachment:
                                   url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
+                                  content-type: jpeg
                                 push:
                                   sound:
                                     name: "{{sound}}"
@@ -1204,6 +1206,7 @@ action:
                             url: "{{tap_action}}"
                             attachment:
                               url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{attachment}}"
+                              content-type: jpeg
                             push:
                               sound:
                                 name: "{{sound}}"
@@ -1438,6 +1441,7 @@ action:
                                     url: "{{tap_action}}"
                                     attachment:
                                       url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera + '/clip.mp4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else attachment }}"
+                                      content-type: "{{ 'mpeg4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else 'jpeg' }}"
                                     push:
                                       sound:
                                         name: "{{ iif(update, 'none', sound) }}"
@@ -1494,6 +1498,7 @@ action:
                                       url: "{{tap_action}}"
                                       attachment:
                                         url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera + '/clip.mp4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else attachment }}"
+                                        content-type: "{{ 'mpeg4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else 'jpeg' }}"
                                       push:
                                         sound:
                                           name: "{{ iif(update, 'none', sound) }}"
@@ -1547,6 +1552,7 @@ action:
                                   url: "{{tap_action}}"
                                   attachment:
                                     url: "{{base_url}}/api/frigate{{client_id}}/notifications/{{id}}/{{camera + '/clip.mp4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else attachment }}"
+                                    content-type: "{{ 'mpeg4' if video|length>0 and wait.trigger.payload_json['type'] == 'end' else 'jpeg' }}"
                                   push:
                                     sound:
                                       name: "{{ iif(update, 'none', sound) }}"
