Better list comparison

--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -940,9 +940,14 @@ action:
               zone_multi_satisfied: "{{ all_zones_entered if zone_only and zone_multi else true}}"
 
               # Compare the joined strings for equality is the simplest solution, due to both variables being defined in band.
-              ordered_zones: "{{ zones | join('|') }}"
-              ordered_entered_zones: "{{ entered_zones | join('|') }}"
-              ordered_zones_match: "{{ ordered_zones in ordered_entered_zones }}"
+              ordered_zones_match: >
+                {% set ns = namespace(intersection=[]) %}
+                {% for item in zones %}
+                    {% if item in entered_zones %}
+                        {% set ns.intersection = ns.intersection + [item] %}
+                    {% endif %}
+                {% endfor %}
+                {{ ns.intersection == zones }}
               # Fails fast if prerequisite of zone or zone_multi is false, as they are pre-requisites
               zone_order_satisfied: "{{ (zone_only and zone_multi and ordered_zones_match) if zone_order_enforced else true }}"
 
