--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -107,8 +107,10 @@ blueprint:
     base_url:
       name: Base URL (Optional)
       description: |
-        The external URL for your Home Assistant instance. 
+        The external URL for your Home Assistant instance.
         Recommended for iOS and required for Android/Fire TV.
+        Must include the scheme i.e http:// or https://
+        Examples: http://192.168.1.25:8123   https://homeassistant.mydomain.com
       default: ""
     mqtt_topic:
       name: MQTT Topic (Advanced)
