Propagating multiple persons presence filter to Beta

--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -427,10 +427,12 @@ blueprint:
           default: ""
           selector:
             entity:
-              domain:
-                - device_tracker
-                - person
-                - group
+              filter:
+                domain:
+                  - device_tracker
+                  - person
+                  - group
+              multiple: true
         state_filter:
           name: State Filter on/off (Optional)
           description: Enable the two State Filter settings below. Only notify if the selected entity is in the specified states.
@@ -916,7 +918,7 @@ action:
               object: "{{ trigger.payload_json['after']['label'] }}"
               label: "{{ object | title }}"
               # Dynamic Variables per event
-              initial_home: "{{ presence_entity != '' and is_state(presence_entity, 'home') }}"
+              initial_home: "{{presence_entity |reject('in', '') |select('is_state', 'home') |list |length != 0 }}"
               entered_zones: "{{ trigger.payload_json['after']['entered_zones'] | default([]) }}"
 
               # Zones Variables
@@ -1258,8 +1260,8 @@ action:
                     event: "{{ wait.trigger.payload_json }}"
                     loitering: "{{ loiter_timer and event['before']['motionless_count']/fps/60 < loiter_timer and event['after']['motionless_count']/fps/60 >= loiter_timer }}"
                     new_snapshot: "{{ update_thumbnail and event['before']['snapshot']['frame_time'] != event['after']['snapshot']['frame_time'] }}"
-                    home: "{{ presence_entity != '' and is_state(presence_entity, 'home') }}"
-                    presence_changed: "{{ presence_entity != '' and as_datetime(event['before']['frame_time']) < states[presence_entity].last_changed }}"
+                    home: "{{presence_entity |reject('in', '') |select('is_state', 'home') |list |length != 0 }}"
+                    presence_changed: "{{ presence_entity |reject('in', '') |expand |map(attribute='last_changed') |list |select('gt', as_datetime(event['before']['frame_time'])) |list |length != 0}}"
                     last_zones: "{{ event['before']['entered_zones'] | lower}}"
                     entered_zones: "{{ event['after']['entered_zones'] | lower | default([]) }}"
 
