--- a/Frigate_Camera_Notifications/Beta.yaml
+++ b/Frigate_Camera_Notifications/Beta.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Frigate Notifications (0.12.0.5)
+  name: Frigate Notifications (0.12.0.5b)
   author: SgtBatten
   homeassistant:
     min_version: 2024.6.0
